tests/main_tests/ui/const_panic_cast_err.stderr
error[E0080]: evaluation of constant value failed
 --> tests/main_tests/ui/const_panic_cast_err.rs:2:16
  |
2 | const _: u16 = constmuck::cast(0u8);
  |                ^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at '
the sizes of T and U are not the same
size_of::<T>(): 1
size_of::<U>(): 2', $DIR/tests/main_tests/ui/const_panic_cast_err.rs:2:16

error[E0080]: evaluation of constant value failed
 --> tests/main_tests/ui/const_panic_cast_err.rs:3:15
  |
3 | const _: u8 = constmuck::cast(0u16);
  |               ^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at '
the sizes of T and U are not the same
size_of::<T>(): 2
size_of::<U>(): 1', $DIR/tests/main_tests/ui/const_panic_cast_err.rs:3:15

error[E0080]: evaluation of constant value failed
  --> tests/main_tests/ui/const_panic_cast_err.rs:12:5
   |
12 |     constmuck::cast_ref_alt(&[0u8; 2])
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at '
the alignment of `T` is lower than `U`
align_of::<T>(): 1
align_of::<U>(): 2', $DIR/tests/main_tests/ui/const_panic_cast_err.rs:12:5

error[E0080]: evaluation of constant value failed
  --> tests/main_tests/ui/const_panic_cast_err.rs:16:16
   |
16 | const _: &u8 = constmuck::cast_ref_alt(&[0u8; 2]);
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at '
the sizes of T and U are not the same
size_of::<T>(): 2
size_of::<U>(): 1', $DIR/tests/main_tests/ui/const_panic_cast_err.rs:16:16

error[E0080]: evaluation of constant value failed
  --> tests/main_tests/ui/const_panic_cast_err.rs:17:21
   |
17 | const _: &[u8; 2] = constmuck::cast_ref_alt(&0u8);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at '
the sizes of T and U are not the same
size_of::<T>(): 1
size_of::<U>(): 2', $DIR/tests/main_tests/ui/const_panic_cast_err.rs:17:21

error[E0080]: evaluation of constant value failed
  --> tests/main_tests/ui/const_panic_cast_err.rs:21:18
   |
21 | const _: &[u8] = constmuck::cast_slice_alt(&[()]);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at '
attempted to cast slice of zero-sized `T` to slice of non-zero-sized `U`
size_of::<T>(): 0
size_of::<U>(): 1', $DIR/tests/main_tests/ui/const_panic_cast_err.rs:21:18

error[E0080]: evaluation of constant value failed
  --> tests/main_tests/ui/const_panic_cast_err.rs:22:18
   |
22 | const _: &[()] = constmuck::cast_slice_alt(&[0u8]);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at '
attempted to cast slice of non-zero-sized `T` to slice of zero-sized `U`
size_of::<T>(): 1
size_of::<U>(): 0', $DIR/tests/main_tests/ui/const_panic_cast_err.rs:22:18

error[E0080]: evaluation of constant value failed
  --> tests/main_tests/ui/const_panic_cast_err.rs:25:23
   |
25 | const _: &[[u8; 4]] = constmuck::cast_slice_alt(&[[2u8; 3]; 5]);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at '
the input slice of `T` doesn't divide evenly into a slice of `U`s
slice.len() * size_of::<T>(): 15
size_of::<U>(): 4
excess bytes: 3', $DIR/tests/main_tests/ui/const_panic_cast_err.rs:25:23

error[E0080]: evaluation of constant value failed
  --> tests/main_tests/ui/const_panic_cast_err.rs:34:5
   |
34 |     constmuck::cast_slice_alt(&[[0u8; 2]; 3])
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at '
the alignment of `T` is lower than `U`
align_of::<T>(): 1
align_of::<U>(): 2', $DIR/tests/main_tests/ui/const_panic_cast_err.rs:34:5
